--- a/index.html
+++ b/index.html
@@ -3,51 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <title>Page Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet"  href="style.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <script>
-    // Your JavaScript goes here!
-    let playerscore = 0;
-    let computerscore = 0;
-    let winner = "";
-    function getComputerChoice() {
-      const options = ['rock', 'paper', 'scissors'];
-      return options[Math.floor(Math.random() * options.length)]   
-    }
-    function Round(playerSelection ,ComputerChoice ) {
-     if (playerSelection === ComputerChoice){
-      winner= "it's a tie " ; 
-     }
-     if((playerSelection === "scissors" &&  ComputerChoice==="paper")||
-     (playerSelection === "rock" &&  ComputerChoice==="scissors")||    
-     (playerSelection === "paper" &&  ComputerChoice==="rock")){
-       playerscore++;
-       winner="playerSelection";
-     }else if ((ComputerChoice === "scissors" &&  playerSelection==="paper")||
-     (ComputerChoice === "rock" &&  playerSelection==="scissors")||    
-     (ComputerChoice === "paper" &&  playerSelection==="rock")) {
-       computerscore++;
-       winner="ComputerChoice";
-     }
-    }
-    let playerSelection = prompt("start by picking one of the three ' Rock , paper and scissors'").toLowerCase();
-    let  ComputerChoice= getComputerChoice();
-    function game(){ 
-      for (let i = 0; i < 5; i++) {
-        playerSelection = prompt(`Round ${i+1} , pick one of the three: Rock , Paper or scissors`).toLowerCase();
-        let result = Round(playerSelection ,ComputerChoice);
-       if(playerscore > computerscore){
-        winner = "you win !";
-       } else if(playerscore < computerscore){
-        winner ="computer wins !"
-       }else{
-        winner = "Draw";
-       }
-      
-      console.log(winner,playerscore,computerscore);
-      }
-    }
-      game();
-  </script>
+   <section id="container">
+    <div id="main-title">
+      <h1> Scissors | Rock | Paper </h1>
+    </div>
+    <div id="player-option-box">
+        <img id="Scissors"  class="images" src="images/scissors.jpeg" alt="Scissors">
+        <img id="Rock"  class="images" src="images/Rock.jpeg" alt="Rock">
+        <img id="Paper" class="images" src="images/paper.jpeg" alt="Paper">
+    </div>
+
+    <div id="page-board">
+         <p id="cpu-choice">Versus the <em>Cpu Random Choice</em></p>Start by selecting one of the three options above.
+         <span id="cpu-result"><em></em></span></p>
+         <p id="game-output">annnd the winner after 5 rounds</p>
+    </div>
+
+    <div>
+      <p class="player-score"><img src="images/Avatar.png" class="player-avatar"> : <span id="human-score">0</span></p>
+
+      <p class="computer-score"><img src="images/Ai.png" class="computer-avatar"> : <span id="CPU-score">0</span></p>
+    </div>
+    <div>
+      <img src="images/Reload.png" id="Reload-icon" title="Reload btn">
+    </div>
+   </section>
 </body>
 </html>
